   * Added: New widget pane.
   * Added: New widget viewport.
   * Added: New dummy widget instance.
   * Added: New control matrix.
   * Trying to initiate movement (or an attack) before previous movement is
     finished no longer unselects the current unit (bug #19734). (The new
     movement command is still deliberately ignored.)
   * Fix income changes during unit movement (bug #19788).
 * Whiteboard:
   * Fixed bug #19626: segfaults on window resize
   * Fixed bug #19369: Using planning mode can cause losing ability to move my units
   * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
   * Fixed bug #19581: Leader can still move after a planned recall
   * Shortened all context menu items
   * Fixed bug #19619: In local games, units keep ghosted appearance during opponent's turn
   * Fixed bug #19613: Multiple attacks after planning attacks in whiteboard
   * Fixed bug #19618: Problems with ending turn with impossible moves
   * Fixed bug #19615: Can see part of opponents' planned moves in local multiplayer game
   * Refactored wb::side_actions
   * Refactored the highlighter and the visitor
 * WML engine:
   * new key: [unit]/[unit_type] vision=<number>, decouples movement and sight range.
   * new tag: [movement_type] [vision_costs], used for calculating sight range if present.
   * new action tag: [clear_menu_item] id=...
   * new key: [set_menu_item][command]delayed_variable_substitution=yes|no
   * Removed support for the deprecated "colour=", "debug_border_colour=",
     and [colour_adjust]
   * Fixed bug #18996: Increase random number generation range.
   * Made it possible to disable the credits screen at the end of a campaign
     by specifying end_credits=no in the final [endlevel] action, or in the
     [campaign] definition (defaults to yes)
   * Added [modify_side] color= attribute, which changes a side's team color
     range (feature/bug #18772)
   * Removed support for the deprecated [removeitem]