@@ -209,6 +209,8 @@ Version 1.11.0-svn:
      finished no longer unselects the current unit (bug #19734). (The new
      movement command is still deliberately ignored.)
    * Fix income changes during unit movement (bug #19788).
+   * The recruit and recall commands no longer appear in the context menu
+     for shrouded or (visibly) occupied hexes.
  * Whiteboard:
    * Fixed bug #19626: segfaults on window resize
    * Fixed bug #19369: Using planning mode can cause losing ability to move my units
